* Support for prelink will be removed in the next release; this includes
  removal of the LD_TRACE_PRELINKING, and LD_USE_LOAD_BIAS, environment
  variables and their functionality in the dynamic loader.

* The LD_TRACE_PRELINKING environment variable has been removed.  Similar
  functionality to obtain the program mapping address can be achieved by
  using LD_TRACE_LOADED_OBJECTS to value of 2.

Changes to build and runtime requirements:

* The audit module interface version LAV_CURRENT is increased to enable
  proper bind-now support.  The loader now advertises via the la_symbind
  flags that PLT trace is not possible.  New audit modules require the
  new dynamic loader supporing the latest LAV_CURRENT version. Old audit
  modules are still loaded for all targets except aarch64.

* The audit interface on aarch64 is extended to support both the indirect
  result location register (x8) and NEON Q register.  Old audit modules are
  rejected by the loader.  Audit modules must be rebuilt to use the newer
  structure sizes and the latest module interface version for LAV_CURRENT.

Security related changes:

  CVE-2022-23219: Passing an overlong file name to the clnt_create
  legacy function could result in a stack-based buffer overflow when
  using the "unix" protocol.  Reported by Martin Sebor.

  CVE-2022-23218: Passing an overlong file name to the svcunix_create
  legacy function could result in a stack-based buffer overflow.

  CVE-2021-3998: Passing a path longer than PATH_MAX to the realpath
  function could result in a memory leak and potential access of
  uninitialized memory.  Reported by Qualys.

  CVE-2021-3999: Passing a buffer of size exactly 1 byte to the getcwd
  function may result in an off-by-one buffer underflow and overflow
  when the current working directory is longer than PATH_MAX and also
  corresponds to the / directory through an unprivileged mount
  namespace.  Reported by Qualys.

The following bugs are resolved with this release:
